@@ -1,7 +1,9 @@
 package com.xuxueli.poi.excel;
 
+import com.xuxueli.poi.excel.annotation.ExcelField;
 import com.xuxueli.poi.excel.annotation.ExcelSheet;
 import com.xuxueli.poi.excel.util.FieldReflectionUtil;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
 import org.apache.poi.ss.usermodel.*;
 import org.slf4j.Logger;
@@ -11,50 +13,67 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
 
 /**
- * Excel导入工具
+ * EXCEL 导入工具
  *
- * @author xuxueli 2017-09-08 22:41:19
+ * @author wj42134
+ * @date 2017 12 22 00:10
  */
 public class ExcelImportUtil {
+    /**
+     * The constant logger.
+     */
     private static Logger logger = LoggerFactory.getLogger(ExcelImportUtil.class);
 
     /**
      * 从Workbook导入Excel文件，并封装成对象
      *
-     * @param workbook
-     * @param sheetClass
-     * @return
+     * @param workbook   the workbook
+     * @param sheetClass the sheet class
+     * @return list
      */
-    public static List<Object> importExcel(Workbook workbook, Class<?> sheetClass) {
-        List<Object> sheetDataList = importSheet(workbook, sheetClass);
-        return sheetDataList;
+    private static <T> List<T> importExcel(Workbook workbook, Class<T> sheetClass) {
+        return importSheet(workbook, sheetClass);
     }
 
-    public static List<Object> importSheet(Workbook workbook, Class<?> sheetClass) {
+    /**
+     * Import sheet list.
+     *
+     * @param workbook   the workbook
+     * @param sheetClass the sheet class
+     * @return the list
+     */
+    private static <T> List<T> importSheet(Workbook workbook, Class<T> sheetClass) {
         try {
             // sheet
             ExcelSheet excelSheet = sheetClass.getAnnotation(ExcelSheet.class);
-            String sheetName = (excelSheet!=null && excelSheet.name()!=null && excelSheet.name().trim().length()>0)?excelSheet.name().trim():sheetClass.getSimpleName();
-
+            String sheetName = excelSheet != null && excelSheet.name().trim().length() > 0 ?
+                    excelSheet.name().trim() : sheetClass.getSimpleName();
             // sheet field
-            List<Field> fields = new ArrayList<Field>();
-            if (sheetClass.getDeclaredFields()!=null && sheetClass.getDeclaredFields().length>0) {
-                for (Field field: sheetClass.getDeclaredFields()) {
-                    if (Modifier.isStatic(field.getModifiers())) {
-                        continue;
+            Map<String, Field> fieldMap = new HashMap<>(); //key:ExcelField name, val:name
+
+            Class tempClass = sheetClass;
+            for (; tempClass != Object.class; tempClass = tempClass.getSuperclass()) {
+                if (tempClass.getDeclaredFields() != null && tempClass.getDeclaredFields().length > 0) {
+                    for (Field field : tempClass.getDeclaredFields()) {
+                        if (Modifier.isStatic(field.getModifiers())) {
+                            continue;
+                        }
+                        if (field.getAnnotation(ExcelField.class) != null) {
+                            String name = field.getAnnotation(ExcelField.class).name();
+                            fieldMap.put(name, field);
+                        }
                     }
-                    fields.add(field);
                 }
             }
 
-            if (fields==null || fields.size()==0) {
-                throw new RuntimeException(">>>>>>>>>>> xxl-excel error, data field can not be empty.");
+            int fieldSize = fieldMap.entrySet().size();
+            if (fieldSize == 0) {
+                throw new RuntimeException(">>>>>>>>>>> excel error, data field can not be empty.");
             }
 
             // sheet data
@@ -65,14 +84,34 @@ public class ExcelImportUtil {
 
             Iterator<Row> sheetIterator = sheet.rowIterator();
             int rowIndex = 0;
-            List<Object> dataList = new ArrayList<Object>();
+            //get head name to arr
+            Row headRow = sheet.getRow(0);
+            int colLength = headRow.getPhysicalNumberOfCells();
+            //key:colName, value:col index
+            String[] sheetHeaders = new String[colLength];
+            for (int i = 0; i < colLength; i++) {
+                String cellValue = headRow.getCell(i).getStringCellValue();
+                if (StringUtils.isNotBlank(cellValue)) {
+                    cellValue.trim();
+                }
+                sheetHeaders[i] = cellValue;
+            }
+            List<T> dataList = new ArrayList<>();
+            int countField = 0;
             while (sheetIterator.hasNext()) {
                 Row rowX = sheetIterator.next();
                 if (rowIndex > 0) {
-                    Object rowObj = sheetClass.newInstance();
-                    for (int i = 0; i < fields.size(); i++) {
-
-                        // cell
+                    // 类必须有空参数构造方法
+                    T rowObj = sheetClass.getDeclaredConstructor().newInstance();
+                    //循环excel列属性
+                    for (int i = 0; i < sheetHeaders.length; i++) {
+                        //excel col name
+                        String fname = sheetHeaders[i];
+                        //col name empty ,don't save
+                        if (StringUtils.isBlank(fname)) {
+                            continue;
+                        }
+                        // cell(col i)
                         Cell cell = rowX.getCell(i);
                         if (cell == null) {
                             continue;
@@ -80,85 +119,94 @@ public class ExcelImportUtil {
 
                         // call val str
                         cell.setCellType(CellType.STRING);
-                        String fieldValueStr = cell.getStringCellValue();       // cell.getCellTypeEnum()
+                        // cell.getCellTypeEnum()
+                        String fieldValueStr = cell.getStringCellValue();
 
                         // java val
-                        Field field = fields.get(i);
+                        Field field = fieldMap.get(fname);
+                        //annotated field not exist,skip(error)
+                        if (field == null) {
+                            throw new RuntimeException(">>>>>>>>>>> excel error, check is your col name matches this bean excel field you defined。" + fname);
+                        }
                         Object fieldValue = FieldReflectionUtil.parseValue(field, fieldValueStr);
                         if (fieldValue == null) {
+                            // 计数 空字段数
+                            countField++;
                             continue;
                         }
-
                         // fill val
                         field.setAccessible(true);
                         field.set(rowObj, fieldValue);
                     }
-                    dataList.add(rowObj);
+
+                    if (countField != sheetHeaders.length) {
+                        dataList.add(rowObj);
+                    }
                 }
                 rowIndex++;
+                // 空字段数 清空
+                countField = 0;
             }
             return dataList;
-        } catch (IllegalAccessException e) {
-            logger.error(e.getMessage(), e);
-            throw new RuntimeException(e);
-        } catch (InstantiationException e) {
+        } catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
             logger.error(e.getMessage(), e);
             throw new RuntimeException(e);
         }
     }
 
     /**
-     * 导入Excel文件，并封装成对象
+     * 从文件路径导入Excel，并封装成对象
      *
-     * @param excelFile
-     * @param sheetClass
-     * @return
+     * @param filePath   the file path
+     * @param sheetClass the sheet class
+     * @return list
      */
-    public static List<Object> importExcel(File excelFile, Class<?> sheetClass) {
-        try {
-            Workbook workbook = WorkbookFactory.create(excelFile);
-            List<Object> dataList = importExcel(workbook, sheetClass);
-            return dataList;
-        } catch (IOException e) {
-            logger.error(e.getMessage(), e);
-            throw new RuntimeException(e);
-        } catch (InvalidFormatException e) {
-            logger.error(e.getMessage(), e);
-            throw new RuntimeException(e);
-        }
-    }
-
-    /**
-     * 从文件路径导入Excel文件，并封装成对象
-     *
-     * @param filePath
-     * @param sheetClass
-     * @return
-     */
-    public static List<Object> importExcel(String filePath, Class<?> sheetClass) {
+    public static <T> List<T> importExcel(String filePath, Class<T> sheetClass) throws IOException {
         File excelFile = new File(filePath);
-        List<Object> dataList = importExcel(excelFile, sheetClass);
-        return dataList;
+        return importExcel(excelFile, sheetClass);
     }
 
     /**
-     * 导入Excel数据流，并封装成对象
+     * 文件导入Excel，并封装成对象
      *
-     * @param inputStream
-     * @param sheetClass
-     * @return
+     * @param excelFile  the excel file
+     * @param sheetClass the sheet class
+     * @return list
      */
-    public static List<Object> importExcel(InputStream inputStream, Class<?> sheetClass) {
+    public static <T> List<T> importExcel(File excelFile, Class<T> sheetClass) throws IOException {
+        Workbook workbook = null;
         try {
-            Workbook workbook = WorkbookFactory.create(inputStream);
-            List<Object> dataList = importExcel(workbook, sheetClass);
-            return dataList;
-        } catch (IOException e) {
+            workbook = WorkbookFactory.create(excelFile);
+            return importExcel(workbook, sheetClass);
+        } catch (IOException | InvalidFormatException e) {
             logger.error(e.getMessage(), e);
             throw new RuntimeException(e);
-        } catch (InvalidFormatException e) {
+        } finally {
+            if (workbook != null) {
+                workbook.close();
+            }
+        }
+    }
+
+    /**
+     * 数据流导入Excel，并封装成对象
+     *
+     * @param inputStream the input stream
+     * @param sheetClass  the sheet class
+     * @return list
+     */
+    public static <T> List<T> importExcel(InputStream inputStream, Class<T> sheetClass) throws IOException {
+        Workbook workbook = null;
+        try {
+            workbook = WorkbookFactory.create(inputStream);
+            return importExcel(workbook, sheetClass);
+        } catch (IOException | InvalidFormatException e) {
             logger.error(e.getMessage(), e);
             throw new RuntimeException(e);
+        } finally {
+            if (workbook != null) {
+                workbook.close();
+            }
         }
     }
 
